[package]
name = "libw"
version = "0.0.1"
edition = "2018"
authors = ["Richard Anaya"]
categories = ["wasm", "no-std"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/richardanaya/libw"
repository = "https://github.com/richardanaya/libw"
description = "A library for simply using wasi"

[dependencies]
wasi = "0.9.0+wasi-snapshot-preview1"